--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -24,11 +24,15 @@ services:
     - CONCOURSE_BASIC_AUTH_PASSWORD
     - CONCOURSE_NO_REALLY_I_DONT_WANT_ANY_AUTH=true
     - CONCOURSE_WORKER_GARDEN_NETWORK
+    extra_hosts:
+    - "concourse.example.com:127.0.0.1"
+    - "localstack.example.com:127.0.0.1"
+
   localstack:
     image: localstack/localstack
     ports:
       - "4567-4583:4567-4583"
-      - "${PORT_WEB_UI-8081}:${PORT_WEB_UI-8080}"
+      - "${PORT_WEB_UI-8080}:${PORT_WEB_UI-8080}"
     environment:
       - SERVICES=${SERVICES- }
       - DEBUG=${DEBUG- }
@@ -40,4 +44,3 @@ services:
     volumes:
       - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
-
